# cobot_bringup

./: package.xml  setup.py
cobot_bringup/: strip_xacro_comments.py
config/: cobot_controllers_gripper.yaml
launch/: spawn_cobot_camera.launch.py  spawn_cobot_camera_gripper.launch.py  spawn_cobot_camera_gripper_moveit.launch.py  spawn_cobot_camera_moveit.launch.py  view_cobot_camera.launch.py  view_cobot_camera_gripper.launch.py
