<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="florian.tretter13@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>cobot_description</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="/ws/install/cobot_description/share/"/>
    <gazebo_ros gazebo_model_path="/ws/install/robotiq_description/share/"/>
  </export>
</package>
